--- a/themes/bootstrap/templates/index.html
+++ b/themes/bootstrap/templates/index.html
@@ -14,12 +14,27 @@
           </div>
         </div>
         <div class="column col-sm-8">
-          <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/active-patients.png"
-               class="img-fluid float rounded">
+
+          <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Active Patients View"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Med Dispense View"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/active-patients.png" class="d-block w-100 rounded">
+              </div>
+              <div class="carousel-item">
+                <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/dispense-medications.png" class="d-block w-100 rounded">
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
+
+
 
   <div class="container">
     <div style="text-align: center;" class="row">
