add padding for sides of blog article, fix author links.

--- a/themes/bootstrap/templates/article.html
+++ b/themes/bootstrap/templates/article.html
@@ -20,7 +20,7 @@
 
 <div class="container px-5, py-5">
   <div class="row justify-content-md-center">
-    <div class="col-sm-5 mx-auto">
+    <div class="col-sm-12 col-md-10 col-lg-6 mx-auto">
     <section id="content" class="body">
       <article>
         <header>
