--- a/themes/bootstrap/templates/page.html
+++ b/themes/bootstrap/templates/page.html
@@ -10,11 +10,22 @@
 {% endblock %}
 
 {% block content %}
-aa
-<section id="content" class="body">
-    <h1 class="entry-title">{{ page.title }}</h1>
+<div class="container px-5, py-5">
+  <div class="row" style="padding-bottom: 2em;">
+      <div class="col-sm-2"></div>
+      <div class="col-sm-8"><h1 class="entry-title">{{ page.title }}</h1></div>
+      <div class="col-sm-2"></div>
+  </div>
+
+ <!-- <div id="content" class="body"> -->
+  <div class="row" style="padding-bottom: 2em;">
+    <div class="col-sm-2"></div>
+    <div class="col-sm-8">
     {% import 'translations.html' as translations with context %}
     {{ translations.translations_for(page) }}
     {{ page.content }}
-</section>
+    </div>
+    <div class="col-sm-2"></div>
+  </div>
+</div>
 {% endblock %}
