--- a/themes/bootstrap/templates/authors.html
+++ b/themes/bootstrap/templates/authors.html
@@ -93,7 +93,7 @@
                     </svg>
                 </a>
                 <br>
-                <a href="https://twitter.com/EshwarKishore22">
+                <a href="https://twitter.com/EshwarKishoreMD">
                     <svg class="bi" width="16" height="16" fill="currentColor">
                       <use href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/bootstrap-icons.svg#twitter"/>
                     </svg>
